重构lealone-bench模块